--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -7,7 +7,7 @@ exl-id: e6668e32-3322-45f6-a575-413c88097e45
 source-git-commit: 87afc9c29790fe77e24698c6090594edc44b3c7a
 workflow-type: tm+mt
 source-wordcount: '916'
-ht-degree: 84%
+ht-degree: 85%
 
 ---
 
@@ -21,7 +21,7 @@ ht-degree: 84%
 | **Ausblenden von Datumsbereichen für den Vergleich in mobilen Scorecards** | Bei mobilen Scorecards können Sie jetzt Vergleichsdatumsbereiche ausblenden. | Nicht angegeben | 8. Februar 2023 |
 | **Kalenderaktualisierungen in Workspace** | <ul><li>Ankerbedienfielddaten: Sie können die Datumsbereichskomponenten im Verhältnis zum Bedienfeldkalender festlegen. [Weitere Informationen](/help/components/date-ranges/calendar.md)</li><li>Aktualisierungen des Kalenderstils: Die Kalenderstile in der gesamten Benutzeroberfläche wurden aktualisiert, um einen konsistenteren und benutzerfreundlicheren Workflow zu bieten.</li><li>Aktualisierungen der Kalenderformel: Wenn Sie relative Daten verwenden, spiegeln alle Kalenderformeln den Beginn des Bedienfelddatumsbereichs wider. [Weitere Informationen](/help/components/date-ranges/calendar.md)</li></ul> | Nicht angegeben | 8. Februar 2023 |
 | **Aktualisierungen des Datumsbereichs des Bedienfelds** | In Workspace wurden die folgenden Verbesserungen hinzugefügt:<ul><li>Ab der Februar-Version basieren Dimensionselemente und Datenvorschauen auf dem Datumsbereich des Bedienfelds und nicht auf den letzten 90 Tagen. </li><li>Alle aufgelisteten Dimensionselemente basieren auf Daten innerhalb des Datumsbereichs des Bedienfelds. Wenn ein Dimensionselement Daten außerhalb des Datumsbereichs enthält, können Sie zusätzliche Daten über den Datumsbereich hinaus am unteren Rand der Liste anzeigen.</li><li>Dimensionen ohne Daten können in der linken Leiste angezeigt werden. Klicken Sie auf die Optionen Weitere Optionen anzeigen , um Dimensionselemente mit Daten außerhalb des Datumsbereichs des Bedienfelds anzuzeigen.</li><li>Die Datenvorschau im Segment und die Generator für berechnete Metriken basieren auf dem Datumsbereich des Bedienfelds, es sei denn, der Zugriff erfolgt über die Komponentenmanager, die kein Bedienfeld haben und weiterhin auf den letzten 90 Tagen basieren.</li><li>Datenvorschau zeigt Daten oder Komponenten basierend auf dem Datumsbereich des Bedienfelds an.</li></ul> | Nicht angegeben | 8. Februar 2023 |
-| **Zeilen-/Spaltenfilter für Adobe Analytics Source Connector-Streaming** | Analytics Source Connector in Adobe Experience Platform ermöglicht jetzt das Filtern von Analytics-Daten, mit denen Profile im [Echtzeit-Kundenprofil](https://experienceleague.adobe.com/docs/experience-platform/profile/home.html?lang=de) vorausgefüllt werden.<p>Die Filterung auf Zeilenebene hilft, die Anzahl der mit Profilen verknüpften Ereignisse zu reduzieren. Die Filterung auf Spaltenebene hilft, die Vielfalt der Ereignisse selbst zu reduzieren, und ermöglicht es Ihnen so, die Nutzung von Profilberechtigungen zu optimieren. Diese Filterung gilt nur für Daten, die an das Echtzeit-Kundenprofil und den [Identity Service](https://experienceleague.adobe.com/docs/experience-platform/identity/home.html?lang=de) gesendet werden.<p>**Die Filterung wirkt sich nicht auf die Daten aus, die zur Verwendung in Anwendungen wie Customer Journey Analytics an Data Lake gesendet werden**. [Weitere Informationen](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de#filtering-for-profile) | Nicht angegeben | Geplant für den 29. März 2023 |
+| **Zeilen-/Spaltenfilter für Adobe Analytics Source Connector-Streaming** | Analytics Source Connector in Adobe Experience Platform ermöglicht jetzt das Filtern von Analytics-Daten, mit denen Profile im [Echtzeit-Kundenprofil](https://experienceleague.adobe.com/docs/experience-platform/profile/home.html?lang=de) vorausgefüllt werden.<p>Die Filterung auf Zeilenebene hilft, die Anzahl der mit Profilen verknüpften Ereignisse zu reduzieren. Die Filterung auf Spaltenebene hilft, die Vielfalt der Ereignisse selbst zu reduzieren, und ermöglicht es Ihnen so, die Nutzung von Profilberechtigungen zu optimieren. Diese Filterung gilt nur für Daten, die an das Echtzeit-Kundenprofil und den [Identity Service](https://experienceleague.adobe.com/docs/experience-platform/identity/home.html?lang=de) gesendet werden.<p>**Die Filterung wirkt sich nicht auf die Daten aus, die zur Verwendung in Anwendungen wie Customer Journey Analytics an Data Lake gesendet werden**. [Weitere Informationen](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de#filtering-for-profile) | Nicht angegeben | Verschoben auf den 29. März 2023 |
 
 {style="table-layout:auto"}
 
@@ -33,7 +33,7 @@ AN-309106
 
 | Hinweis | Hinweis hinzugefügt oder aktualisiert | Beschreibung |
 | --- | --- | --- |
-| Keine aktuellen Hinweise | Nicht angegeben | nicht angegeben |
+| Keine aktuellen Hinweise | Nicht angegeben | Nicht angegeben |
 
 {style="table-layout:auto"}
 
