--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -4,14 +4,38 @@ description: Versionshinweise zu CJA für 2023 anzeigen
 feature: Release Notes
 mini-toc-levels: 2
 exl-id: e6668e32-3322-45f6-a575-413c88097e45
-source-git-commit: 87afc9c29790fe77e24698c6090594edc44b3c7a
+source-git-commit: 51ed4766c0720c437368b460d9b864bc9fc9fc88
 workflow-type: tm+mt
-source-wordcount: '916'
-ht-degree: 85%
+source-wordcount: '0'
+ht-degree: 0%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics für 2023
+
+## März 2023 {#mar23}
+
+| Funktion | Beschreibung | [Start des Rollouts](/help/release-notes/releases.md) | [Allgemeine Verfügbarkeit](/help/release-notes/releases.md) |
+| ----------- | ---------- | ----- | --- |
+| Datenwörterbuch in Analysis Workspace | Das Datenwörterbuch hilft Benutzenden und Admins, die Komponenten (Dimensionen, Metriken) in ihrer CJA-Umgebung zu verfolgen, zu verwalten und besser zu verstehen. Weitere Informationen | 8. März 2023 | Vorübergehend nicht verfügbar |
+| Daten-Storys in mobilen Dashboards | Mit Daten-Storys können Sie mehrere anpassbare Detailansichten zu Kacheln in mobilen Scorecard-Projekten hinzufügen. Verwenden Sie Daten-Storys, um tiefer in wichtige Treiber, zugehörige Metriken und verschiedene Schritte während der Customer Journey einzutauchen. Sie können einfach durch diese Ansichten wischen, um die ganze Story hinter Ihren Schlüsselmetriken zu verstehen. | Weitere Informationen | Nicht angegeben | 8. März 2023 |
+| Ablaufdaten für geplante Projekte | Sie können die maximalen Ablaufdaten für geplante Projekte auf bis zu ein Jahr festlegen, unabhängig von der Häufigkeit des Zeitplans. | Weitere Informationen | Nicht angegeben | 8. März 2023 |
+| Link-Freigabe für Projekte (keine Anmeldung erforderlich) – Nur privater Beta-Zugriff | Sie können jetzt schreibgeschützte Links zu Analysis Workspace-Projekten für Personen freigeben, die keinen Zugriff auf CJA haben. Sie können Projekt-Links für Personen außerhalb Ihrer Organisation oder für Personen innerhalb Ihrer Organisation freigeben, die nicht für CJA vorgesehen sind. Weitere Informationen Wenden Sie sich an Ihr Adobe Account-Team, um der privaten Beta beizutreten. | 26. April 2023 | Juni 2023 |
+| Aktualisierungen des Datumsbereichs des Bedienfelds | In Workspace wurden die folgenden Verbesserungen hinzugefügt:<ul><li>Ab der Februar-Version basieren Dimensionselemente und Datenvorschauen auf dem Datumsbereich des Bedienfelds und nicht auf den letzten 90 Tagen.</li><li>Alle aufgelisteten Dimensionselemente basieren auf Daten innerhalb des Datumsbereichs des Bedienfelds. Wenn ein Dimensionselement Daten außerhalb des Datumsbereichs enthält, können Sie zusätzliche Daten über den Datumsbereich hinaus am unteren Rand der Liste anzeigen.</li><li>Dimensionen ohne Daten können in der linken Leiste angezeigt werden. Klicken Sie auf [!UICONTROL Mehr anzeigen] Optionen zum Anzeigen von Dimensionselementen mit Daten außerhalb des Datumsbereichs des Bedienfelds.</li><li>Die Datenvorschau im Segment und die Generator für berechnete Metriken basieren auf dem Datumsbereich des Bedienfelds, es sei denn, der Zugriff erfolgt über die Komponentenmanager, die kein Bedienfeld haben und weiterhin auf den letzten 90 Tagen basieren.</li><li>Datenvorschau zeigt Daten oder Komponenten basierend auf dem Datumsbereich des Bedienfelds an.</li></ul> | Nicht angegeben | 8. Februar 2023 |
+
+{style="table-layout:auto"}
+
+### Fehlerbehebungen in Customer Journey Analytics
+
+AN-309729; AN-309975; AN-311779; AN-313095
+
+### Wichtige Hinweise für CJA-Admins
+
+| Hinweis | Hinweis hinzugefügt oder aktualisiert | Beschreibung |
+| --- | --- | --- |
+| Verfügbarkeit von Analytics Source Connector | 15. Februar 2023 | Am 28. Februar 2023 wurde der Analytics Source Connector im neuen Adobe Experience Platform-Rechenzentrum in Kanada bereitgestellt. |
+
+{style="table-layout:auto"}
 
 ## Februar 2023 {#feb23}
 
